WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162715
URLParser should fail to parse unclosed IPv6 addresses
https://bugs.webkit.org/show_bug.cgi?id=162715
Summary
URLParser should fail to parse unclosed IPv6 addresses
Alex Christensen
Reported
2016-09-28 21:22:20 PDT
URLParser should fail to parse unclosed IPv6 addresses
Attachments
Patch
(2.64 KB, patch)
2016-09-28 21:23 PDT
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-09-28 21:23:17 PDT
Created
attachment 290174
[details]
Patch
Alex Christensen
Comment 2
2016-09-29 11:22:04 PDT
http://trac.webkit.org/changeset/206593
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug