URLParser should fail to parse unclosed IPv6 addresses https://bugs.webkit.org/show_bug.cgi?id=162715

Reviewed by Tim Horton.

Source/WebCore:

Covered by new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parseHostAndPort):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206593 268f45cc-cd09-0410-ab3c-d52691b4dbfc